infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: elevation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: elevation-pvc
      containers:
        - name: api
          image: ghcr.io/dzfranklin/elevation-api:latest
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /health
              port: http
