infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: elevation
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: api
